[package]
name = "willis"
version = "0.1.0"
authors = ["Lyuben Todorov <lyuben.todorov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
serde = "1.0.116"
serde_cbor = "0.11.1"
rand = "0.7.3"

[dependencies.piko]
path = "../node"